--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,1 +1,2 @@
-de.malkusch.validation.Country.message=The country code is invalid.
+de.malkusch.validation.constraints.Country.message=The country code is invalid.
+de.malkusch.validation.constraints.age.Age.message=The Age must be at least {value} years.
