--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,14 @@
 		</dependency>
 
 		<dependency>
+			<groupId>fr.marcwrobel</groupId>
+			<artifactId>jbanking</artifactId>
+			<version>1.0</version>
+			<scope>provided</scope>
+			<optional>true</optional>
+		</dependency>
+
+		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>2.3</version>
