--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,3 @@
-de.malkusch.validation.constraints.Country.message=The country code is invalid.
 de.malkusch.validation.constraints.age.Age.message=The Age must be at least {value} years.
+de.malkusch.validation.constraints.BIC.message=The BIC is invalid.
+de.malkusch.validation.constraints.Country.message=The country code is invalid.
