--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -4,3 +4,4 @@ de.malkusch.validation.constraints.Country.message=The country code is invalid.
 de.malkusch.validation.constraints.IBAN.message=The IBAN address is invalid.
 de.malkusch.validation.constraints.upload.ContentType.message=The uploaded file must match the content type "{value}".
 de.malkusch.validation.constraints.upload.Image.message=The uploaded file is not a readable image.
+de.malkusch.validation.constraints.upload.NotEmptyUpload.message=The uploaded file must not be empty.
