--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,7 +1,7 @@
 de.malkusch.validation.constraints.age.Age.message=The Age must be at least {value} years.
-de.malkusch.validation.constraints.BIC.message=The BIC is invalid.
+de.malkusch.validation.constraints.banking.BIC.message=The BIC is invalid.
+de.malkusch.validation.constraints.banking.IBAN.message=The IBAN address is invalid.
 de.malkusch.validation.constraints.Country.message=The country code is invalid.
-de.malkusch.validation.constraints.IBAN.message=The IBAN address is invalid.
 de.malkusch.validation.constraints.upload.ContentType.message=The uploaded file must match the content type "{value}".
 de.malkusch.validation.constraints.upload.Image.message=The uploaded file is not a readable image.
 de.malkusch.validation.constraints.upload.NotEmptyUpload.message=The uploaded file must not be empty.
