--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -5,3 +5,4 @@ de.malkusch.validation.constraints.Country.message=The country code is invalid.
 de.malkusch.validation.constraints.upload.ContentType.message=The uploaded file must match the content type "{value}".
 de.malkusch.validation.constraints.upload.Image.message=The uploaded file is not a readable image.
 de.malkusch.validation.constraints.upload.NotEmptyUpload.message=The uploaded file must not be empty.
+de.malkusch.validation.constraints.upload.UploadSize.message=The uploaded file size must be between {min} and {max} bytes.
