--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>validation</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>validation</name>
-	<description>Set of additional JSR-303 constraints</description>
+	<description>Set of additional JSR-303 constraints and validators</description>
 
 	<parent>
 		<groupId>de.malkusch.parent</groupId>
