--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.malkusch.validation</groupId>
 	<artifactId>validation</artifactId>
@@ -11,7 +12,7 @@
 		<artifactId>oss-parent</artifactId>
 		<version>1.1</version>
 	</parent>
-	
+
 	<properties>
 		<org.springframework.version>3.2.4.RELEASE</org.springframework.version>
 	</properties>
@@ -33,6 +34,11 @@
 			<groupId>fr.marcwrobel</groupId>
 			<artifactId>jbanking</artifactId>
 			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.8.3</version>
 		</dependency>
 
 		<dependency>
