--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -2,6 +2,7 @@ de.malkusch.validation.constraints.age.Age.message=The Age must be at least {val
 de.malkusch.validation.constraints.banking.BIC.message=The BIC is invalid.
 de.malkusch.validation.constraints.banking.IBAN.message=The IBAN address is invalid.
 de.malkusch.validation.constraints.Country.message=The country code is invalid.
+de.malkusch.validation.constraints.net.TLD.message=The top level domain is invalid.
 de.malkusch.validation.constraints.SameProperties.message=The value must be identical to {original}.
 de.malkusch.validation.constraints.upload.ContentType.message=The uploaded file must match the content type "{value}".
 de.malkusch.validation.constraints.upload.Image.message=The uploaded file is not a readable image.
