--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -3,6 +3,7 @@ de.malkusch.validation.constraints.banking.BIC.message=The BIC is invalid.
 de.malkusch.validation.constraints.banking.IBAN.message=The IBAN address is invalid.
 de.malkusch.validation.constraints.Country.message=The country code is invalid.
 de.malkusch.validation.constraints.ISBN.message=The ISBN is invalid.
+de.malkusch.validation.constraints.net.Domain.message=The domain name is invalid.
 de.malkusch.validation.constraints.net.IPv4.message=The internet address (v4) is invalid.
 de.malkusch.validation.constraints.net.TLD.message=The top level domain is invalid.
 de.malkusch.validation.constraints.SameProperties.message=The value must be identical to {original}.
