--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -6,7 +6,7 @@ de.malkusch.validation.constraints.ISBN.message=The ISBN is invalid.
 de.malkusch.validation.constraints.net.Domain.message=The domain name is invalid.
 de.malkusch.validation.constraints.net.IPv4.message=The internet address (v4) is invalid.
 de.malkusch.validation.constraints.net.TLD.message=The top level domain is invalid.
-de.malkusch.validation.constraints.SameProperties.message=The value must be identical to {original}.
+de.malkusch.validation.constraints.SameProperties.message=The properties are not equal.
 de.malkusch.validation.constraints.upload.ContentType.message=The uploaded file must match the content type "{value}".
 de.malkusch.validation.constraints.upload.Image.message=The uploaded file is not a readable image.
 de.malkusch.validation.constraints.upload.NotEmptyUpload.message=The uploaded file must not be empty.
