--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>de.malkusch.parent</groupId>
 		<artifactId>oss-parent</artifactId>
-		<version>1.2</version>
+		<version>1.3-SNAPSHOT</version>
 	</parent>
 
 	<properties>
@@ -17,11 +17,20 @@
 	</properties>
 
 	<url>https://github.com/malkusch/${project.artifactId}</url>
+	
 	<scm>
 		<connection>scm:git:git://github.com/malkusch/${project.artifactId}.git</connection>
 		<developerConnection>scm:git:git@github.com:malkusch/${project.artifactId}.git</developerConnection>
 		<url>https://github.com/malkusch/${project.artifactId}</url>
 	</scm>
+	
+	<distributionManagement>
+		<site>
+			<id>github</id>
+			<name>Github</name>
+			<url>http://malkusch.github.io/${project.artifactId}/</url>
+		</site>
+	</distributionManagement>
 
 	<dependencies>
 		<dependency>
