--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -9,6 +9,7 @@ de.malkusch.validation.constraints.net.TLD.message=The top level domain is inval
 de.malkusch.validation.constraints.EqualProperties.message=The properties are not equal.
 de.malkusch.validation.constraints.upload.ContentType.message=The uploaded file must match the content type "{value}".
 de.malkusch.validation.constraints.upload.Image.message=The uploaded file is not a readable image.
+de.malkusch.validation.constraints.upload.NotEmptyBlob.message=The Blob must not be empty.
 de.malkusch.validation.constraints.upload.NotEmptyUpload.message=The uploaded file must not be empty.
 
 #deprecated:
