--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<artifactId>validation</artifactId>
 	<version>0.2.0-SNAPSHOT</version>
 	<name>validation</name>
-	<description>Set of additional JSR-303 constraints and validators</description>
+	<description>Set of additional JSR 349 (formerly JSR 303) constraints and validators</description>
 
 	<parent>
 		<groupId>de.malkusch.parent</groupId>
