--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,5 +1,6 @@
 de.malkusch.validation.constraints.age.Age.message=The Age must be at least {value} years.
 de.malkusch.validation.constraints.banking.BIC.message=The BIC is invalid.
+de.malkusch.validation.constraints.banking.BitcoinAddress.message=The Bitcoin address is invalid.
 de.malkusch.validation.constraints.banking.IBAN.message=The IBAN address is invalid.
 de.malkusch.validation.constraints.Country.message=The country code is invalid.
 de.malkusch.validation.constraints.ISBN.message=The ISBN is invalid.
